tests/reference/asr-string_01-78629c4.stderr
semantic error: Type mismatch in index, expected a single integer
 --> tests/errors/string_01.py:3:13
  |
3 |     print(x[2, 5])
  |             ^^^^ type mismatch (found: 'tuple[i32, i32]', expected: 'i32')
